# Cross-Border-Payment-App-for-Africa

./: .dockerignore  .env.example  .gitignore  README.md  SUBMISSION_README.md  TODO-GHA.md  TODO.md  commit_msg.txt  docker-compose.horizon.yml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml  deploy.yml
.kiro/settings/: lsp.json
backend/: .env.example  .eslintrc.js  .prettierrc  Dockerfile  package-lock.json  package.json
backend/scripts/: generateAFRIKeypairs.js
backend/src/: app.js  db.js  index.js
backend/tests/: adminController.search.test.js  agentRegistration.test.js  auth.test.js  batch-payment.test.js  forgotPasswordTiming.test.js  health.test.js  history.dateRange.test.js  historyQuery.test.js  horizonWorker.reconnect.test.js  ledger.test.js  networkPassphrase.test.js  payment.test.js  security-headers.test.js  send.failedRecord.test.js  send.policyRejection.webhook.test.js  sendPath.test.js  sendPathCache.test.js  supportTicketRateLimit.test.js  transaction-limits.test.js  (+5 more)
contracts/: .gitignore  README.md  UPGRADING.md  deploy.sh
contracts/kyc-attestation/: Cargo.toml
contracts/kyc-attestation/src/: lib.rs  test.rs
database/: schema.sql
docs/: horizon-self-hosting.md  wallet-backup-recovery.md
e2e/: .gitignore  README.md  global-setup.js  global-teardown.js  package.json  playwright.config.js
frontend/: .env.example  .eslintrc.js  Dockerfile  package-lock.json  package.json  tailwind.config.js
monitoring/: grafana-dashboard.json
scripts/: demo-integration.js  verify-stellar-integration.js
(+310 files in other folders)
